--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ lerna-debug.log*
 
 # node_modules
 node_modules/
-
+package-lock.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
