--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@clerk/clerk-react": "^5.46.0",
     "@date-fns/tz": "^1.4.1",
     "@paypal/react-paypal-js": "^8.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
