--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.46.0",
     "@clerk/localizations": "^3.25.3",
     "@date-fns/tz": "^1.4.1",
+    "@googleapis/docs": "^7.0.0",
     "@paypal/react-paypal-js": "^8.9.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^161.0.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
